--- a/web/src/assets/scss/index.scss
+++ b/web/src/assets/scss/index.scss
@@ -1,24 +1,86 @@
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 html {
-  height: 100%;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    height: 100%;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 body {
-  background-color: #f4f6f8;
-  height: 100%;
+    background-color: #f4f6f8;
+    height: 100%;
 }
 
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 #root {
-  height: 100%;
+    height: 100%;
+}
+.entities {
+    line-height: 2;
+}
+
+.data-entity {
+    padding: 0.25em 0.35em;
+    margin: 0px 0.25em;
+    line-height: 1;
+    display: inline-block;
+    border-radius: 0.25em;
+    border: 1px solid;
+    font-weight: bold;
+}
+
+.data-entity::after {
+    color: white;
+    box-sizing: border-box;
+    content: attr(type);
+    font-size: 0.6em;
+    line-height: 1;
+    padding: 0.35em;
+    border-radius: 0.35em;
+    text-transform: uppercase;
+    display: inline-block;
+    vertical-align: middle;
+    margin: 0px 0px 0.1rem 0.5rem;
+    background-color: var(--tooltip-color);
+    border-color: rgb(118, 161, 32);
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-item {
+    text-transform: uppercase;
+    text-align: center;
+    color: black;
+    display: block;
+    background-color: var(--tooltip-color-80);
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+.dropdown:hover .data-blank {
+    background-color: red;
+}
+.dropdown-item:hover {
+    background-color: var(--tooltip-color);
 }
